--- a/app/views/dna_samples/index.html.erb
+++ b/app/views/dna_samples/index.html.erb
@@ -2,11 +2,11 @@
 
 <h1>Listing Dna Samples</h1>
 
-<table>
+<table class='table table-striped table-condensed'>
   <thead>
     <tr>
-      <th>Sample</th>
-      <th>Old</th>
+      <th>Patient</th>
+      <th>Old ID</th>
       <th>Extraction date</th>
       <th>Notes</th>
       <th colspan="3"></th>
@@ -16,7 +16,7 @@
   <tbody>
     <% @dna_samples.each do |dna_sample| %>
       <tr>
-        <td><%= dna_sample.sample %></td>
+        <td><%= dna_sample.sample.full_name %></td>
         <td><%= dna_sample.old_id %></td>
         <td><%= dna_sample.extraction_date %></td>
         <td><%= dna_sample.notes %></td>
