--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -2,12 +2,10 @@
 
 <h1>Listing Patients</h1>
 
-<table>
+<table class='table table-striped table-condensed'>
   <thead>
     <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Acronym</th>
+      <th>Name</th>
       <th>Birthdate</th>
       <th colspan="3"></th>
     </tr>
@@ -16,10 +14,8 @@
   <tbody>
     <% @patients.each do |patient| %>
       <tr>
-        <td><%= patient.first_name %></td>
-        <td><%= patient.last_name %></td>
-        <td><%= patient.acronym %></td>
-        <td><%= patient.birthdate %></td>
+        <td><%= patient.full_name %></td>
+        <td><%= patient.birthdate && patient.birthdate.strftime("%-d %b") %></td>
         <td><%= link_to 'Show', patient %></td>
         <td><%= link_to 'Edit', edit_patient_path(patient) %></td>
         <td><%= link_to 'Destroy', patient, method: :delete, data: { confirm: 'Are you sure?' } %></td>
