--- a/app/views/samples/index.html.erb
+++ b/app/views/samples/index.html.erb
@@ -2,46 +2,55 @@
 
 <h1>Listing Samples</h1>
 
+<%= link_to 'Create new Sample', new_sample_path, class: "btn btn-default" %>
+
 <table class='table table-striped table-condensed'>
   <thead>
     <tr>
+      <th>Project</th>
+      <th>ID</th>
+      <th>Patient</th>
       <th>Institution</th>
-      <th>Doctor full name</th>
-      <th>Doctor email</th>
       <th>Request date</th>
       <th>Admission date</th>
       <th>Request category</th>
       <th>Notes</th>
-      <th>Project</th>
-      <th>Old</th>
-      <th>Patient</th>
-      <th>Barcode</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @samples.each do |sample| %>
       <tr>
+        <td><%= sample.project.tag %></td>
+        <td><%= sample.id %></td>
+        <td><%= sample.patient.full_name %></td>
         <td><%= sample.institution %></td>
-        <td><%= sample.doctor_full_name %></td>
-        <td><%= sample.doctor_email %></td>
-        <td><%= sample.request_date %></td>
+        <td><%= sample.request_date  && sample.admission_date.strftime("%-d %b") %></td>
         <td><%= sample.admission_date && sample.admission_date.strftime("%-d %b") %></td>
         <td><%= sample.request_category %></td>
         <td><%= sample.notes %></td>
-        <td><%= sample.project %></td>
-        <td><%= sample.old_id %></td>
-        <td><%= sample.patient %></td>
-        <td><%= sample.barcode %></td>
-        <td><%= link_to 'Show', sample %></td>
-        <td><%= link_to 'Edit', edit_sample_path(sample) %></td>
-        <td><%= link_to 'Destroy', sample, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        
+        <td class="details">
+          <div class="dropdown">
+            <a class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <%= fa_icon "caret-down" %>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+              <ul>
+                <li>Doctor full name:<br><%= sample.doctor_full_name || "-" %></li>
+                <li>Doctor email:<br><%= sample.doctor_email || "-" %></li>
+                <li>Old ID:<br><%= sample.old_id || "-" %></li>
+                <li>Barcode:<br><%= sample.barcode || "-"  %></li>
+                <li><%= link_to 'Edit', edit_sample_path(sample) %></li>
+                <li><%= link_to 'Destroy', sample, method: :delete, data: { confirm: sample.delete_prompt } %></li>
+              </ul>
+            </div>
+          </div>
+        </td><!-- .details -->
+
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Sample', new_sample_path %>
