--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,7 @@
       </div><!--/row-->
 
       <footer>
-        <p>&copy; Company 2016</p>
+        <p>&copy; <%= "#{COMPANY_NAME} #{Date.today.year}" %></p>
       </footer>
 
     </div> <!-- /container -->
