WIP Sample form

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -12,48 +12,13 @@
   cursor: pointer;
   background-color: gold !important;
   // ^ Highlights expanded samples.
+  // !important overrides bootstrap heavily nested rule.
   &.collapsed {
     background-color: initial !important;
     // It uses the .collapsed Bootstrap class that is removed/restored on click
+  // !important overrides bootstrap heavily nested rule.
   }
 }
-
-.hidden-row {
-  padding: 0 !important;
-  border: 0 !important;
-
-  .padding {
-    padding: 20px;
-  }
-
-  .collapsing, .collapse.in {
-    border-left: 2px solid gold;
-    border-right: 2px solid gold;
-    border-bottom: 2px solid gold;
-  }
-}
-
-// Details of a DNA sample quantifications
-.dna-details {
-  padding: 5px;
-  margin-bottom: 5px;
-  background-color: lavender;
-  border: 1px solid silver;
-  border-radius: 4px;
-
-  .title {
-    font-size: 1.15em;
-  }
-
-  table.quantification {
-    margin-bottom: 0px;  // Override bootstrap's 20px
-  }
-}
-
-.quanti-index {  // First cell of quantification tables
-  width: 75px;
-}
-
 
 // Fix text color of link_to buttons
 a.btn {
