--- a/app/assets/stylesheets/samples.scss
+++ b/app/assets/stylesheets/samples.scss
@@ -34,3 +34,12 @@
 .quanti-index {  // First cell of quantification tables
   width: 75px;
 }
+
+
+// Options to easily fill the form fields
+.existing-options {
+  .btn {
+    font-size: 0.9em;
+  }
+}
+
