--- a/app/views/samples/_form.html.erb
+++ b/app/views/samples/_form.html.erb
@@ -1,61 +1,70 @@
-<%= form_for(@sample) do |f| %>
-  <% if @sample.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@sample.errors.count, "error") %> prohibited this sample from being saved:</h2>
+<div class="row">
+  <div class="col-sm-12">
+    <%= bootstrap_form_for(@sample) do |f| %>
+      <% if @sample.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@sample.errors.count, "error") %> prohibited this sample from being saved:</h2>
 
-      <ul>
-      <% @sample.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+          <ul>
+          <% @sample.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :institution %><br>
-    <%= f.text_field :institution %>
+      <div class="field">
+        <%= f.text_field :institution %>
+
+        <div class="btn-group existing-options">
+          <% @form_options[:institutions].each do |institution| %>
+            <button type="button" class="btn btn-default option">
+              <%= institution %>
+            </button>
+          <% end %>
+        </div>
+      </div>
+
+      <div class="field">
+        <%= f.text_field :doctor_full_name %>
+      </div>
+      <div class="field">
+        <%= f.text_field :doctor_email %>
+      </div>
+      <div class="field">
+        <%= f.date_select :request_date %>
+      </div>
+      <div class="field">
+        <%= f.date_select :admission_date %>
+      </div>
+      <div class="field">
+        <%= f.text_field :request_category %>
+      </div>
+      <div class="field">
+        <%= f.text_area :notes %>
+      </div>
+
+      <div class="field">
+        <label class="control-label">Project</label><br>
+        
+        <%= collection_radio_buttons(:sample, :project_id, Project.all, :id, :tag) do |b| %>
+          <%= b.label(class: "radio-inline") do %>
+            <%= b.radio_button + b.text %>
+          <% end %>
+        <% end %>
+      </div>
+
+      <div class="field">
+        <%= f.text_field :patient_id %>
+      </div>
+      <div class="field">
+        <%= f.text_field :barcode %>
+      </div>
+
+      <div class="actions">
+        <%= f.submit 'Update Sample', class: "btn btn-primary" %>
+        <button type="reset" class="btn btn-default">Reset the form</button>
+      </div>
+    <% end %>
   </div>
-  <div class="field">
-    <%= f.label :doctor_full_name %><br>
-    <%= f.text_field :doctor_full_name %>
-  </div>
-  <div class="field">
-    <%= f.label :doctor_email %><br>
-    <%= f.text_field :doctor_email %>
-  </div>
-  <div class="field">
-    <%= f.label :request_date %><br>
-    <%= f.date_select :request_date %>
-  </div>
-  <div class="field">
-    <%= f.label :admission_date %><br>
-    <%= f.date_select :admission_date %>
-  </div>
-  <div class="field">
-    <%= f.label :request_category %><br>
-    <%= f.text_field :request_category %>
-  </div>
-  <div class="field">
-    <%= f.label :notes %><br>
-    <%= f.text_area :notes %>
-  </div>
-  <div class="field">
-    <%= f.label :project_id %><br>
-    <%= f.text_field :project_id %>
-  </div>
-  <div class="field">
-    <%= f.label :old_id %><br>
-    <%= f.text_field :old_id %>
-  </div>
-  <div class="field">
-    <%= f.label :patient_id %><br>
-    <%= f.text_field :patient_id %>
-  </div>
-  <div class="field">
-    <%= f.label :barcode %><br>
-    <%= f.text_field :barcode %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
