--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1,24 +1,13 @@
-.project {
+.enpv1, .exome, .pgsn {
   font-weight: bold;
-
-  // Color of Project tags
-  &.enpv1 { color: darkSeaGreen; }
-  &.exome { color: burlyWood; }
-  &.pgsn  { color: darkKhaki; }
 }
 
-// Index tables with extra details in a hidden collapsible row:
-.display-row {
-  cursor: pointer;
-  background-color: gold !important;
-  // ^ Highlights expanded samples.
-  // !important overrides bootstrap heavily nested rule.
-  &.collapsed {
-    background-color: initial !important;
-    // It uses the .collapsed Bootstrap class that is removed/restored on click
-  // !important overrides bootstrap heavily nested rule.
-  }
-}
+.enpv1 { color: darkSeaGreen; }
+.exome { color: burlyWood; }
+.pgsn  { color: darkKhaki; }
+
+.grey { color: grey; }
+.small { font-size: 0.9em !important; }
 
 // Fix text color of link_to buttons
 a.btn {
