--- a/app/views/dna_samples/_form.html.erb
+++ b/app/views/dna_samples/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@dna_sample) do |f| %>
+<%= bootstrap_form_for(@dna_sample) do |f| %>
   <% if @dna_sample.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@dna_sample.errors.count, "error") %> prohibited this dna_sample from being saved:</h2>
@@ -12,19 +12,15 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :sample_id %><br>
-    <%= f.text_field :sample_id %>
+    <label class="control-label">Extracted from this sample:</label><br>
+    <%= collection_select(:dna_sample, :sample_id, Sample.all.decorate,
+                          :id, :description, {},
+                          {class: "form-control inline"}) %>
   </div>
   <div class="field">
-    <%= f.label :old_id %><br>
-    <%= f.text_field :old_id %>
-  </div>
-  <div class="field">
-    <%= f.label :extraction_date %><br>
     <%= f.date_select :extraction_date %>
   </div>
   <div class="field">
-    <%= f.label :notes %><br>
     <%= f.text_area :notes %>
   </div>
   <div class="actions">
