--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@patient) do |f| %>
+<%= bootstrap_form_for(@patient) do |f| %>
   <% if @patient.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@patient.errors.count, "error") %> prohibited this patient from being saved:</h2>
@@ -12,19 +12,15 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :first_name %><br>
     <%= f.text_field :first_name %>
   </div>
   <div class="field">
-    <%= f.label :last_name %><br>
     <%= f.text_field :last_name %>
   </div>
   <div class="field">
-    <%= f.label :acronym %><br>
     <%= f.text_field :acronym %>
   </div>
   <div class="field">
-    <%= f.label :birthdate %><br>
     <%= f.date_select :birthdate %>
   </div>
   <div class="actions">
