--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,22 +1,33 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Patients</h1>
+<h1>
+  Patients
+  <%= link_to 'Create a new patient', new_patient_path, class: "btn btn-default" %>
+</h1>
+
 
 <table class='table table-striped table-condensed'>
   <thead>
     <tr>
+      <th>ID</th>
       <th>Name</th>
+      <th>Project</th>
+      <th>Samples</th>
       <th>Birthdate</th>
-      <th colspan="3"></th>
+      <th>Age</th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @patients.each do |patient| %>
       <tr>
+        <td><%= patient.id %></td>
         <td><%= patient.full_name %></td>
-        <td><%= patient.birthdate && patient.birthdate.strftime("%-d %b") %></td>
-        <td><%= link_to 'Show', patient %></td>
+        <td><%= safe_join(patient.project_tags, ', ') %></td>
+        <td><%= safe_join(patient.sample_links, ', ') %></td>
+        <td><%= patient.birthdate && patient.birthdate.strftime("%B %-d, %Y") %></td>
+        <td><%= patient.age %></td>
         <td><%= link_to 'Edit', edit_patient_path(patient) %></td>
         <td><%= link_to 'Destroy', patient, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -25,5 +36,3 @@
 </table>
 
 <br>
-
-<%= link_to 'New Patient', new_patient_path %>
