--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@project) do |f| %>
+<%= bootstrap_form_for(@project) do |f| %>
   <% if @project.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</h2>
@@ -12,19 +12,15 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :full_name %><br>
     <%= f.text_field :full_name %>
   </div>
   <div class="field">
-    <%= f.label :tag %><br>
     <%= f.text_field :tag %>
   </div>
   <div class="field">
-    <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
   <div class="field">
-    <%= f.label :old_id %><br>
     <%= f.text_field :old_id %>
   </div>
   <div class="actions">
