--- a/app/views/samples/index.html.erb
+++ b/app/views/samples/index.html.erb
@@ -1,11 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Samples</h1>
+<h1>
+  Samples
+  <%= link_to 'Create a new sample', new_sample_path, class: "btn btn-default" %>
+</h1>
 
 <div class="row">
   <div class="col-sm-12">
     <p>
-      <%= link_to 'Create new Sample', new_sample_path, class: "btn btn-default" %>
     </p>
   </div>
 </div>
@@ -19,6 +21,7 @@
           <th>Project</th>
           <th>ID</th>
           <th>Patient</th>
+          <th>Extractions</th>
           <th>Institution</th>
           <th>Request date</th>
           <th>Admission date</th>
@@ -38,6 +41,7 @@
             </td>
             <td><%= sample.id %></td>
             <td><%= sample.patient.full_name %></td>
+            <td><%= safe_join(sample.dna_samples.map{ fa_icon "flask", class: "grey small" }) %></td>
             <td><%= sample.institution %></td>
             <td><%= sample.request_date && sample.admission_date.strftime("%-d %b") %></td>
             <td><%= sample.admission_date && sample.admission_date.strftime("%-d %b") %></td>
@@ -45,8 +49,8 @@
           </tr>
 
           <!-- Details row -->
-          <tr>
-            <td colspan="7" class="hidden-row">
+          <tr class="hidden-row">
+            <td colspan="8">
               <div class="accordion-body collapse" id="detail-<%= sample.id %>">
                 <div class="padding">
 
@@ -56,11 +60,13 @@
                     <li>Doctor email: <%= sample.doctor_email || "-" %></li>
                     <li>Old ID: <%= sample.old_id || "-" %></li>
                     <li>Barcode: <%= sample.barcode || "-"  %></li>
-                    <li>Notes: <%= sample.notes %></li>
+                    <li>Notes: <%= sample.notes || "-" %></li>
                   </ul>
                   <p>
-                    <%= link_to 'Edit these details', edit_sample_path(sample),
-                      class: "btn btn-default" %>
+                    <%= link_to 'Edit the sample details', edit_sample_path(sample),
+                      class: "btn btn-default", target: "_blank" %>
+                    <%= link_to 'Edit the patient details', edit_patient_path(sample.patient),
+                      class: "btn btn-default", target: "_blank" %>
                   </p>
 
                   <% unless sample.dna_samples.count.zero? %>
@@ -80,7 +86,11 @@
                             <table class="table table-condensed table-striped quantification">
                               <% dna_sample.nanodrop_quantifications.decorate.each do |nd| %>
                                 <tr>
-                                  <th></th>
+                                  <th>
+                                    <%= link_to edit_nanodrop_quantification_path(nd), title: "Edit this table" do %>
+                                      <span class="grey small">edit</span>
+                                    <% end %>
+                                  </th>
                                   <th>Concentration</th>
                                   <th>260/280</th>
                                   <th>260/230</th>
@@ -109,7 +119,11 @@
                             <table class="table table-condensed table-striped quantification">
                               <% dna_sample.qubit_quantifications.decorate.each do |qb| %>
                                 <tr>
-                                  <th></th>
+                                  <th>
+                                    <%= link_to edit_qubit_quantification_path(qb), title: "Edit this table" do %>
+                                      <span class="grey small">edit</span>
+                                    <% end %>
+                                  </th>
                                   <th>[Assay]</th>
                                   <th>[Stock]</th>
                                   <th>Assay Type</th>
