--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
           <ul class="nav navbar-nav">
             <li><%= link_to "Patients", "/patients"  %></li>
             <li><%= link_to "Samples", "/samples"  %></li>
-            <li><%= link_to "DNA Samples", "/dna_samples"  %></li>
+            <li><%= link_to "Load quantification files", "/dna_samples/select_quantification_files"  %></li>
             <li><%= link_to "Libraries", "/libraries"  %></li>
             <li><%= link_to "Sequencings", "/sequencings"  %></li>
           </ul>
