--- a/app/views/dna_samples/index.html.erb
+++ b/app/views/dna_samples/index.html.erb
@@ -1,26 +1,3 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Load quantification data from files</h1>
-
-<div class="row">
-  <div class="col-sm-12">
-    <form>
-      <div class="field">
-        Load Nanodrop quantification file (.tsv)
-      </div>
-      <div class="field">
-        Load Qubit quantification file (.csv)
-      </div>
-      <button type="submit" class="btn btn-primary">
-        Submit the loaded files
-      </button>
-      <button type="reset" class="btn btn-default">
-        Unload files
-      </button>
-    </form>
-  </div>
-</div>
-
 <h1>
   Dna Samples
   <%= link_to 'Create a new DNA Sample', new_dna_sample_path,
@@ -28,7 +5,7 @@
 </h1>
 
 
-<table class='table table-striped table-condensed'>
+<table class='table table-bordered table-striped table-condensed'>
   <thead>
     <tr>
       <th>ID</th>
