--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -6,7 +6,7 @@
 </h1>
 
 
-<table class='table table-striped table-condensed'>
+<table class='table table-bordered table-striped table-condensed'>
   <thead>
     <tr>
       <th>ID</th>
