extracted Sample to partial

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -7,6 +7,8 @@
 .pgsn  { color: darkKhaki; }
 
 .grey { color: grey; }
+.red { color: fireBrik; }
+.green { color: seaGreen; }
 .small { font-size: 0.9em !important; }
 
 // Fix text color of link_to buttons
