--- a/app/assets/stylesheets/dna_samples.scss
+++ b/app/assets/stylesheets/dna_samples.scss
@@ -1,3 +1,21 @@
-// Place all the styles related to the DnaSamples controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+// Details of a DNA sample quantifications
+.dna-details {
+  padding: 5px;
+  margin-bottom: 5px;
+  background-color: lavender;
+  border: 1px solid silver;
+  border-radius: 4px;
+
+  .title {
+    font-size: 1.15em;
+  }
+
+  table.quantification {
+    margin-bottom: 5px;  // Override bootstrap's 20px
+  }
+}
+
+.quanti-index {  // First cell of quantification tables
+  width: 75px;
+}
+
