--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,18 +1,14 @@
-<p id="notice"><%= notice %></p>
-
 <h1>
   Patients
   <%= link_to 'Create a new patient', new_patient_path, class: "btn btn-default" %>
 </h1>
 
-
-<table class='table table-bordered table-striped table-condensed'>
+<table class='table table-striped table-condensed'>
   <thead>
     <tr>
       <th>ID</th>
       <th>Name</th>
       <th>Project</th>
-      <th>Samples</th>
       <th>Birthdate</th>
       <th>Age</th>
       <th colspan="2"></th>
@@ -21,18 +17,37 @@
 
   <tbody>
     <% @patients.each do |patient| %>
-      <tr>
+
+      <!-- Main row -->
+      <tr class="display-row collapsed">
+      <tr class="display-row collapsed" data-toggle="collapse"
+        data-target="#detail-<%= patient.id %>" class="accordion-toggle">
         <td><%= patient.id %></td>
         <td><%= patient.full_name %></td>
         <td><%= safe_join(patient.project_tags, ', ') %></td>
-        <td><%= safe_join(patient.sample_links, ', ') %></td>
         <td><%= patient.birthdate && patient.birthdate.strftime("%B %-d, %Y") %></td>
         <td><%= patient.age %></td>
         <td><%= link_to 'Edit', edit_patient_path(patient) %></td>
-        <td><%= link_to 'Destroy', patient, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', patient,
+                method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
+
+      <!-- Details row -->
+      <tr class="hidden-row">
+        <td colspan="8">
+          <div class="accordion-body collapse" id="detail-<%= patient.id %>">
+            <div class="padding">
+              <p>Samples:</p>
+              <% patient.samples.each do |sample| %>
+                <div class="subtle-box">
+                  <%= render sample %>
+                </div>
+              <% end %>
+            </div><!-- .padding -->
+          </div><!-- .accordion-body -->
+        </td>
+      </tr>
+
     <% end %>
   </tbody>
 </table>
-
-<br>
