--- a/app/views/nanodrop_quantifications/_nanodrop_quantification.html.erb
+++ b/app/views/nanodrop_quantifications/_nanodrop_quantification.html.erb
@@ -17,7 +17,7 @@
 <tr>
   <th class="quanti-index">Nanodrop</td>
   <td><%= nanodrop_quantification.concentration %></td>
-  <td><%= nanodrop_quantification.ratio_260_280 %></td>
+  <%= nanodrop_quantification.ratio_260_280_td %>
   <td><%= nanodrop_quantification.ratio_260_230 %></td>
   <td><%= nanodrop_quantification.absorbance_280 %></td>
   <td><%= nanodrop_quantification.absorbance_260 %></td>
