--- a/app/views/dna_samples/select_quantification_files.html.erb
+++ b/app/views/dna_samples/select_quantification_files.html.erb
@@ -1,4 +1,11 @@
-<h1>Load quantification data from files</h1>
+<div class="header">
+  <div class="title">
+    <h1>
+      <%= fa_icon 'bar-chart' %>
+      Load quantification data from files
+    </h1>
+  </div>
+</div>
 
 <div class="row">
   <div class="col-sm-12">
