--- a/app/views/samples/_sample.html.erb
+++ b/app/views/samples/_sample.html.erb
@@ -1,5 +1,12 @@
 <p>Sample details:</p>
 <ul>
+  <% if show_full_data %>
+    <li><%= sample.project.tag %>-<%= sample.id %></li>
+    <li>Patient: <%= sample.patient.full_name %></li>
+    <li>Institution: <%= sample.institution %></li>
+    <li>Request date: <%= sample.request_date %></li>
+    <li>Admission date: <%= sample.admission_date %></li>
+  <% end %>
   <li>Doctor name: <%= sample.doctor_full_name || "-" %></li>
   <li>Doctor email: <%= sample.doctor_email || "-" %></li>
   <li>Old ID: <%= sample.old_id || "-" %></li>
@@ -45,6 +52,5 @@
       </div><!-- .dna-sample-details -->
     <% end %>
   </p>
-
 <% end %>
 
