--- a/app/views/dna_samples/index.html.erb
+++ b/app/views/dna_samples/index.html.erb
@@ -1,8 +1,14 @@
-<h1>
-  Dna Samples
-  <%= link_to 'Create a new DNA Sample', new_dna_sample_path,
-    class: "btn btn-default" %>
-</h1>
+<div class="header">
+  <div class="title">
+    <h1>
+      Dna Samples
+    </h1>
+  </div>
+  <div class="actions">
+    <%= link_to 'Create a new DNA Sample', new_dna_sample_path,
+      class: "btn btn-default" %>
+  </div>
+</div>
 
 
 <table class='table table-bordered table-striped table-condensed'>
