--- a/app/views/dna_samples/new.html.erb
+++ b/app/views/dna_samples/new.html.erb
@@ -1,3 +1,7 @@
-<h1>Create a new Dna Sample</h1>
+<div class="header">
+  <div class="title">
+    <h1>Create a new Dna Sample</h1>
+  </div>
+</div>
 
 <%= render 'form' %>
