--- a/app/views/dna_samples/select_quantification_files.html.erb
+++ b/app/views/dna_samples/select_quantification_files.html.erb
@@ -1,7 +1,7 @@
 <div class="header">
   <div class="title">
     <h1>
-      <%= fa_icon 'bar-chart' %>
+      <%= fa_icon 'balance-scale' %>
       Load quantification data from files
     </h1>
   </div>
@@ -9,6 +9,10 @@
 
 <div class="row">
   <div class="col-sm-12">
+    <div class="alert alert-info">
+      Please put <strong><span class="mono-font">ProjectTag-DnaID</span></strong> in the "Sample ID" field of the quantification files.
+    </div>
+
     <%= form_tag("/dna_samples/upload_quantification_files", action: :upload, multipart: true) do |f| %>
       <div class="field">
         <label class="control-label" for="nanodrop_file">
