--- a/app/views/libraries/index.html.erb
+++ b/app/views/libraries/index.html.erb
@@ -1,6 +1,14 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Libraries</h1>
+<div class="header">
+  <div class="title">
+    <h1>
+      <%= fa_icon 'braille' %>
+      Libraries
+    </h1>
+  </div>
+  <div class="actions">
+    <%= link_to 'Build a new library', new_library_path, class: 'btn btn-default' %>
+  </div>
+</div>
 
 <table>
   <thead>
