--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -1,3 +1,7 @@
-<h1>Editing Patient</h1>
+<div class="header">
+  <div class="title">
+    <h1>Editing patient info</h1>
+  </div>
+</div>
 
 <%= render 'form' %>
