--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -1,3 +1,7 @@
-<h1>Load a new patient</h1>
+<div class="header">
+  <div class="title">
+    <h1>Load a new patient</h1>
+  </div>
+</div>
 
 <%= render 'form' %>
